add actuator and devtools

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/crud-data
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+
+management.endpoints.web.exposure.include=*
+management.endpoints.web.base-path=/actuator
+management.endpoint.health.show-details=always
+
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
